# pct_python_default

./: CHANGES.rst  README.rst  conf_root.py
{{PizzaCutter.project_dir}}/: .coveragerc  .flake8  .travis.yml  LICENSE  Makefile  conftest.py  pyproject.toml  requirements_test.txt  requirements{{PizzaCutter.option.no_overwrite}}.txt  setup.cfg  setup.py  {{PizzaCutter.package_name}}{{PizzaCutter.option.no_overwrite}}.ipynb
{{PizzaCutter.project_dir}}/.github/workflows/: python-package.yml
{{PizzaCutter.project_dir}}/gha_addons{{PizzaCutter.option.no_copy}}/: gha_template_osx_addon.yml  gha_template_windows_addon.yml  gha_template_wine_addon.yml
{{PizzaCutter.project_dir}}/travis_addons{{PizzaCutter.option.no_copy}}/: travis_template_osx_addon.yml  travis_template_windows_addon.yml  travis_template_wine_addon.yml
{{PizzaCutter.project_dir}}/{{PizzaCutter.docs_dir}}/: README_template.rst  badges.rst  commandline_help.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  tested_under.rst  try_in_jupyter.rst  usage{{PizzaCutter.option.no_overwrite}}.rst
{{PizzaCutter.project_dir}}/{{PizzaCutter.package_dir}}/: __init__boot__.py  __init__conf__.py  __init__{{PizzaCutter.option.no_overwrite}}.py  cli_exit_tools.py  {{PizzaCutter.cli_module_filename}}.py{{PizzaCutter.option.no_overwrite}}  {{PizzaCutter.main_module_filename}}.py{{PizzaCutter.option.no_overwrite}}
{{PizzaCutter.project_dir}}/{{PizzaCutter.test_dir}}/: test_cli.py{{PizzaCutter.option.no_overwrite}}
{{PizzaCutter.project_dir}}/{{PizzaCutter.test_dir}}/local_testscripts/: lib_bash_functions.sh  run_pytest.sh  run_testloop.sh  run_testloop_pytest_and_mypy_only_no_setup.sh  testing_tools.py
