[build-system]
requires = {{PizzaCutter.pyproject.build_system.requires}}
build-backend = "{{PizzaCutter.pyproject.build_system.backend}}"

[project]
# see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
name = "{{PizzaCutter.pyproject.project.name}}"
authors = {{PizzaCutter.pyproject.project.authors}}
description = "{{PizzaCutter.pyproject.project.description}}"
readme = "README.rst"
requires-python = "{{PizzaCutter.pyproject.project.requires_python}}"
keywords = {{PizzaCutter.pyproject.project.keywords}}
license = {{PizzaCutter.pyproject.project.licence}}
classifiers = {{PizzaCutter.pyproject.project.classifiers}}
# dependencies - former setup.cfg "install_requires"
# see: https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
dependencies = {{PizzaCutter.pyproject.project.dependencies}}
version = "{{PizzaCutter.pyproject.project.version}}"
zip_save = {{PizzaCutter.pyproject.zip_safe}}
url = "{{PizzaCutter.pyproject.url}}"

[project.optional-dependencies]
test = {{PizzaCutter.pyproject.optional_dependencies.test}}

{{PizzaCutter.pyproject.scripts}}{{PizzaCutter.option.delete_line_if_empty}}

{{PizzaCutter.pyproject.package_data}}{{PizzaCutter.option.delete_line_if_empty}}

[tool.black]
line-length = {{PizzaCutter.black_line_length}}
#You should include all Python versions that you want your code to run under
target-version = {{PizzaCutter.black_target_versions}}
# Note that you have to use single-quoted strings in TOML for regular expressions
include = '{{PizzaCutter.black_include_regexp}}'
exclude = '{{PizzaCutter.black_exclude_regexp}}'
