[build-system]
requires = {{PizzaCutter.pyproject.build_system.requires}}
build-backend = "{{PizzaCutter.pyproject.build_system.backend}}"

[project]
# see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
name = "{{PizzaCutter.pyproject.project.name}}"
authors = {{PizzaCutter.pyproject.project.authors}}
description = "{{PizzaCutter.pyproject.project.description}}"
readme = "README.rst"
requires-python = "{{PizzaCutter.pyproject.project.requires_python}}"
keywords = {{PizzaCutter.pyproject.project.keywords}}
license = {{PizzaCutter.pyproject.project.licence}}
classifiers = {{PizzaCutter.pyproject.project.classifiers}}
# dependencies - former setup.cfg "install_requires"
# see: https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
dependencies = {{PizzaCutter.pyproject.project.dependencies}}
version = "{{PizzaCutter.pyproject.project.version}}"
# seems to be not allowed anymore
# zip-save = {{PizzaCutter.pyproject.zip_safe}}

[project.urls]
Homepage = "{{PizzaCutter.pyproject.url}}"
Documentation = "{{PizzaCutter.pyproject.url}}/blob/master/README.rst"
Repository = "{{PizzaCutter.pyproject.url}}.git"
Changelog = "{{PizzaCutter.pyproject.url}}/blob/master/CHANGES.rst"

[project.optional-dependencies]
test = {{PizzaCutter.pyproject.optional_dependencies.test}}

{{PizzaCutter.pyproject.scripts}}{{PizzaCutter.option.delete_line_if_empty}}

{{PizzaCutter.pyproject.package_data}}{{PizzaCutter.option.delete_line_if_empty}}

[tool.black]
line-length = {{PizzaCutter.black_line_length}}
#You should include all Python versions that you want your code to run under
target-version = {{PizzaCutter.black_target_versions}}
# Note that you have to use single-quoted strings in TOML for regular expressions
include = '{{PizzaCutter.black_include_regexp}}'
exclude = '{{PizzaCutter.black_exclude_regexp}}'

[tool.mypy]
verbosity=0
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
no_strict_optional = true
show_error_context = true

[tool.pytest.ini_options]
addopts = "-vvl --doctest-modules"
doctest_optionflags =  "NORMALIZE_WHITESPACE ELLIPSIS ALLOW_UNICODE ALLOW_BYTES IGNORE_EXCEPTION_DETAIL"
log_cli = true
log_cli_level = "CRITICAL"

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
ignore-vulns = 
[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969"]
